[project]
name = "catalyststudioguides"
version = "0.1.5"
description = "Guides for Catalyst Studios modpacks"
readme = "index.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs",
	"mkdocs-material",
	"mkdocs-glightbox",
	"mkdocs-video",
	"mkdocs-audio",
	"mkdocs-git-revision-date-localized-plugin",
	"mkdocs-git-authors-plugin",
	"mkdocs-minify-plugin",
	"mkdocs-autorefs",
	"mkdocs-awesome-pages-plugin",
	"mkdocs-open-in-new-tab",
	"mkdocs-meta-descriptions-plugin",
]
